# verificatum-vmgj

./: .macros.m4  .travis.yml  .version.m4  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.build  README  README.md  README_DEV  README_DEV.md  configure.ac
native/: .macros.m4  Makefile.am  Makefile.build  com_verificatum_vmgj_VMG.c  configure.ac  convert.c  convert.h  extract_GMP_CFLAGS.c
native/m4src/: ace_prog_javac.m4  ax_jni_include_dir.m4
src/java/com/verificatum/vmgj/: BenchVMG.java  FpowmTab.java  MillerRabin.java  TestVMG.java  VMG.magic  package-info.java
src/m4/: ac_check_java_home.m4  ace_check_jvmg.m4  ace_prog_jar.m4  ace_prog_java.m4  ace_prog_javac.m4  ace_prog_javadoc.m4  ace_prog_javah.m4  dps_check_plugin.m4
src/mf/: MANIFEST.MF.src
tools/staticanalysis/: generate_analysis.sh
tools/staticanalysis/checkstyle/: checkstyle_configure.xml  checkstyle_filter.sh  checkstyle_ruleset.xml  checkstyle_suppressions.xml  checkstyle_wrapper
tools/staticanalysis/findbugs/: findbugs_configure.xml  findbugs_wrapper
tools/staticanalysis/pmd/: pmd_filter.sh  pmd_ruleset.xml  pmd_wrapper
